syntax = "proto3";

package v1;

option go_package = "./v1;v1";

import "validate/validate.proto";

message GetUserRequest {
  uint32 id = 1[(validate.rules).uint32 = {gte:1}];
}

message GetUserReply {
  uint32 id = 1;
  string name = 2;
  string gender = 3;
  string email = 4;
}

message PageUserRequest{
  uint32 page = 1[(validate.rules).uint32 = {gte:1}];
  uint32 page_size = 2[(validate.rules).uint32 = {gte:10,lte:50}];
  optional string email = 3[(validate.rules).string = {email:true}];
}

message PageUserReply{
  message data{
    uint32 id = 1;
    string name = 2;
    string gender = 3;
    string email = 4;
  }
  uint32 total = 1;
  repeated data list = 2;
}

message AddUserRequest {
  string name = 1[(validate.rules).string = {min_len:2}];
  string gender = 2[(validate.rules).string = {min_len:1}];
  string email = 3[(validate.rules).string = {email:true}];
  string password = 4[(validate.rules).string = {min_len:6}];
}

message AddUserReply {
  uint32 id = 1;
}

message UpdateUserRequest {
  uint32 id = 1[(validate.rules).uint32 = {gte:1}];
  optional string name = 2[(validate.rules).string = {min_len:2}];
  optional string gender = 3[(validate.rules).string = {min_len:1}];
  optional string email = 4[(validate.rules).string = {email:true}];
}

message DeleteUserRequest {
  uint32 id = 1[(validate.rules).uint32 = {gte:1}];
}